Add new pubs, education section

--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
 				<a href="#pubs">Publications</a>
 				<!-- <i class="fas fa-circle" style="color:black;"></i> -->
 				&bull;
+				<a href="#edu">Education</a>
+				&bull;
 				<a href="#github">GitHub Projects</a>
 				&bull;
 				<a href="#tutorials">Tutorials</a>
@@ -72,22 +74,42 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+			<!-- POT1 -->
+			<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<div class="card-img">
+							<img src="https://www.medrxiv.org/content/medrxiv/early/2022/05/19/2022.05.16.22274971/F3.large.jpg?width=800&height=600&carousel=1" class="card-img-pub" alt="histogram of telomere length and binding of POT1 variants ">
+						</div>
+						<p class="card-title">May 2022 (preprint)</p>
+						<p class="card-text" style="font-style: italic;">
+							Population-based analysis of <em>POT1</em> variants in a cutaneous melanoma case-control cohort
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1101/2022.05.16.22274971" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> MedRxiv</a>
+					</div>
+				</div>
+		  	</div>
+			<!-- PARP1 -->
 			<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
 							<img src="https://www.biorxiv.org/content/biorxiv/early/2021/11/21/2021.11.21.469407/F1.medium.gif" class="card-img-pub" alt="workflow starting with HyDn-SNP-S going to both MD and the PFAM database, looking for compensatory mutation, and returning to MD">
 						</div>
-						<p class="card-title">April 2022 (preprint)</p>
+						<p class="card-title">May 2022</p>
 						<p class="card-text" style="font-style: italic;">
 							Computational Compensatory Mutation Discovery Approach: Predicting a PARP1 Variant Rescue Mutation
 						</p>
 					</div>
 					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1016/j.bpj.2022.05.036" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Biophys. J.</a>
 						<a href="https://doi.org/10.1101/2021.11.21.469407" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> BioRxiv</a>
 					</div>
 				</div>
 		  	</div>
+			<!-- RdRp -->
 			<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
@@ -105,7 +127,14 @@
 					</div>
 				</div>
 		  	</div>
-		  	<div class="col-md-4">
+		</div>
+		</div>
+		<!-- End Row 1 -->
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
+			<!-- ELF -->
+			<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
@@ -122,12 +151,7 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 1 -->
-		<!-- Add 1 row of 2 cards -->
-		<div class="container">
-		<div class="row">
+			<!-- TET2 APCSB -->
 			<div class="col-md-4">
 				<div class="card h-100">
 					<div class="card-body">
@@ -145,6 +169,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- TET2 Selectivity -->
 			<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
@@ -162,6 +187,15 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 2 -->
+		<!-- Add 1 row of 1 card -->
+		<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+			</div>
+			<!-- PolK -->
 		  	<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
@@ -181,7 +215,87 @@
 		  	</div>
 		</div>
 		</div>
-		<!-- End Row 2 -->
+		<!-- End row 3 -->
+	</section>
+
+	<!--
+	#############################################
+	##            Education Category
+	#############################################
+	 -->
+
+		<!-- GitHub projects heading -->
+		<section class="bg-light text-center">
+			<div class="container" id="edu">
+				<h2>
+					Education
+				</h2>
+			</div>
+
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
+			<!-- School 1 -->
+			<!-- Change all to col-md-4 when uncommented  -->
+			<!-- <div class="col-md-4">
+				<div class="card h-100">
+					<div class="card-body">
+						<p class="card-title">Medical</p>
+						<div class="card-img">
+							<img src="images/edu/msuchm.svg" class="card-img-pub" alt="MSUCHM logo">
+						</div>
+						<p class="card-text">
+							Incoming MS1
+							<br>
+						</p>
+					</div>
+				</div>
+			</div> -->
+			<!-- School 2 -->
+			<div class="col-md-6">
+				<div class="card h-100">
+					<div class="card-body">
+						<p class="card-title">Doctoral</p>
+						<div class="card-img">
+							<img src="images/edu/unt.svg" class="card-img-pub" alt="UNT logo">
+						</div>
+						<p class="card-title">May 2022</p>
+						<p class="card-text">
+							Doctor of Philosophy in Chemistry <br>
+							Concentration in Physical Chemistry
+							<br>
+							Dissertation:
+							<em>
+							Computational Modeling of Cancer-Related Mutations
+							in DNA Repair Enzymes Using Molecular Dynamics and
+							Quantum Mechanics/Molecular Mechanics
+							</em>
+						</p>
+						<div class="card-footer mx-auto">
+							<!-- <a href="https://digital.library.unt.edu" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Dissertation</a> -->
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- School 3 -->
+			<div class="col-md-6">
+				<div class="card h-100">
+					<div class="card-body">
+						<p class="card-title">Baccalaureate</p>
+						<div class="card-img">
+							<img src="images/edu/tsu.svg" class="card-img-pub" style="object-fit: cover;" alt="MSUCHM logo">
+						</div>
+						<p class="card-title">May 2017</p>
+						<p class="card-text">
+							Bachelor of Science in Chemistry (ACS Certified) <br>
+							Bachelor of Arts in Psychology
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		</div>
+		<!-- End Row -->
 	</section>
 
 <!--
@@ -191,7 +305,7 @@
  -->
 
 	<!-- GitHub projects heading -->
-	<section class="bg-light text-center">
+	<section class="text-center">
 		<div class="container" id="github">
 			<h2>
 				GitHub Projects
@@ -206,7 +320,7 @@
 				<div class="card-body">
 					<p class="card-title">Computational Chemistry Website</p>
 					<div class="card-img">
-						<img src="images/ccw.png" class="card-img-top" alt="atoms showing vacuum, implicit, and explicit solvation">
+						<img src="images/gh/ccw.png" class="card-img-top" alt="atoms showing vacuum, implicit, and explicit solvation">
 					</div>
 					<p class="card-text">
 						My website with guides for getting started with UNIX, AMBER, simulation analysis, and R.
@@ -222,7 +336,7 @@
 		   		<div class="card-body">
 					<p class="card-title">Research Scripts</p>
 					<div class="card-img">
-						<img src="images/research-scripts.png" class="card-img-top" alt="scatterplot">
+						<img src="images/gh/research-scripts.png" class="card-img-top" alt="scatterplot">
 					</div>
 					<p class="card-text">
 						Different run and analysis scripts as described on the Computational Chemistry Website.
@@ -238,7 +352,7 @@
 		   		<div class="card-body">
 					<p class="card-title">PDBXYZ and XYZPDB</p>
 					<div class="card-img">
-						<img src="images/pdbxyz.png" class="card-img-top" alt="protein structure">
+						<img src="images/gh/pdbxyz.png" class="card-img-top" alt="protein structure">
 					</div>
 					<p class="card-text">
 						Scripts to convert between PDB to XYZ files, without using the existing TINKER programs for conversion.
@@ -260,7 +374,7 @@
 				<div class="card-body">
 					<p class="card-title">Vim Cpptraj</p>
 					<div class="card-img">
-						<img src="images/vim-cpptraj.png" class="card-img-top" alt="vim screenshot">
+						<img src="images/gh/vim-cpptraj.png" class="card-img-top" alt="vim screenshot">
 					</div>
 					<p class="card-text">
 						Syntax highlighting for <code>cpptraj</code> in <code>vim</code>.
@@ -276,7 +390,7 @@
 				<div class="card-body">
 					<p class="card-title">VSCode Cpptraj</p>
 					<div class="card-img">
-						<img src="images/vscode-cpptraj.png" class="card-img-top" alt="VS Code screenshot">
+						<img src="images/gh/vscode-cpptraj.png" class="card-img-top" alt="VS Code screenshot">
 					</div>
 					<p class="card-text">
 						Syntax highlighting for <code>cpptraj</code> in Visual Studio Code.
@@ -292,7 +406,7 @@
 				<div class="card-body">
 					<p class="card-title">Atom Cpptraj</p>
 					<div class="card-img">
-						<img src="images/atom-cpptraj.png" class="card-img-top" alt="Atom screenshot">
+						<img src="images/gh/atom-cpptraj.png" class="card-img-top" alt="Atom screenshot">
 					</div>
 					<p class="card-text">
 						Syntax highlighting for <code>cpptraj</code> in the Atom text editor.
@@ -314,7 +428,7 @@
 				<div class="card-body">
 					<p class="card-title">THRIVE Lifeline Resource Table</p>
 					<div class="card-img">
-						<img src="images/thrive-resource-table.png" class="card-img-top" alt="table screenshot">
+						<img src="images/gh/thrive-resource-table.png" class="card-img-top" alt="table screenshot">
 					</div>
 					<p class="card-text">
 						A table rendered using the <code>DT</code> package for RMarkdown.
@@ -330,7 +444,7 @@
 		   		<div class="card-body">
 					<p class="card-title">THRIVE Lifeline Resource App</p>
 					<div class="card-img">
-						<img src="images/thrive-shiny-app.png" class="card-img-top" alt="shiny table screenshot">
+						<img src="images/gh/thrive-shiny-app.png" class="card-img-top" alt="shiny table screenshot">
 					</div>
 					<p class="card-text">
 						An R Shiny app to render a CSV.
@@ -353,7 +467,7 @@
  -->
 
 	<!-- Tutorials heading -->
-	<section class="text-center">
+	<section class="bg-primary text-center">
 		<div class="container" id="tutorials">
 			<h2>
 				Tutorials
@@ -404,7 +518,7 @@
  -->
 
  <!-- Tutorials heading -->
- <section class="bg-primary text-center">
+ <section class="text-center">
 	 <div class="container" id="sites">
 		 <h2>
 			 Websites Maintained
@@ -419,7 +533,7 @@
  		   		<div class="card-body">
  					<p class="card-title">oSTEM@North Texas Website</p>
  					<div class="card-img">
- 						<img src="images/ostem-site-screenshot.png" class="card-img-top" alt="screenshot of oSTEM North Texas site index page">
+ 						<img src="images/web/ostem-site-screenshot.png" class="card-img-top" alt="screenshot of oSTEM North Texas site index page">
  					</div>
  					<p class="card-text">
  						A Jekyll-based site for the Out in STEM chapter at the University of North Texas.
@@ -435,7 +549,7 @@
  				<div class="card-body">
  					<p class="card-title">THRIVE Lifeline</p>
  					<div class="card-img">
- 						<img src="images/thrive-site-screenshot.png" class="card-img-top" alt="screenshot of THRIVE Lifeline site index">
+ 						<img src="images/web/thrive-site-screenshot.png" class="card-img-top" alt="screenshot of THRIVE Lifeline site index">
  					</div>
  					<p class="card-text">
  						An RMarkdown-based site for THRIVE Lifeline, a text-based crisis hotline staffed by people in STEMM with marginalized identities.
@@ -451,7 +565,7 @@
  		   		<div class="card-body">
  					<p class="card-title">UNT Chemistry Cruntch3 Website</p>
  					<div class="card-img">
- 						<img src="images/cruntch-site-screenshot.png" class="card-img-top" alt="screenshot of UNT Chemistry site index page">
+ 						<img src="images/web/cruntch-site-screenshot.png" class="card-img-top" alt="screenshot of UNT Chemistry site index page">
  					</div>
  					<p class="card-text">
  						An MkDocs site with the user's guide for the Chemistry Departments's HPC resources at the University of North Texas.
@@ -474,7 +588,7 @@
  -->
 
 	<!-- Tutorials heading -->
-	<section class="text-center">
+	<section class="bg-light text-center">
 		<div class="container" id="hackathons">
 			<h2>
 				Hackathons
@@ -490,7 +604,7 @@
 				<div class="card-body">
 					<p class="card-title">Real-World Issue Challenge</p>
 					<div class="card-img">
-						<img src="images/access-map.png" class="card-img-top" alt="AccessMap homepage which shows a map with pins">
+						<img src="images/hackathons/access-map.png" class="card-img-top" alt="AccessMap homepage which shows a map with pins">
 					</div>
 					<p class="card-text">
 						<i class="fas fa-award" style="color:blue; size:3x;"></i> First place
@@ -508,7 +622,7 @@
 				<div class="card-body">
 					<p class="card-title">Crisis Resources Challenge</p>
 					<div class="card-img">
-						<img src="images/QueersInCrisis.png" class="card-img-top" alt="presentation slide for Queers in Crisis">
+						<img src="images/hackathons/QueersInCrisis.png" class="card-img-top" alt="presentation slide for Queers in Crisis">
 					</div>
 					<p class="card-text">
 						<i class="fas fa-award" style="color:black; size:3x;"></i> Third place
@@ -527,7 +641,7 @@
 		   		<div class="card-body">
 					<p class="card-title">Voter Literacy App Challenge</p>
 					<div class="card-img">
-						<img src="images/narwhal-app.png" class="card-img-top" alt="app tile layout">
+						<img src="images/hackathons/narwhal-app.png" class="card-img-top" alt="app tile layout">
 					</div>
 					<p class="card-text">
 						<i class="fas fa-award" style="color:blue; size:3x;"></i> First place
@@ -552,7 +666,7 @@
  -->
 
 	<!-- Section for links -->
-	<section class="bg-light text-center">
+	<section class="text-center">
 		<div class="container" id="CV">
 			<h2>
 				CV
