--- a/index.html
+++ b/index.html
@@ -74,6 +74,23 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+			<!-- TET2 H1881R -->
+			<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<div class="card-img">
+							<img src="images/pubs/EDA-residues.png" class="card-img-pub" alt="residues with large energy changes in TET2">
+						</div>
+						<p class="card-title">August 2022</p>
+						<p class="card-text" style="font-style: italic;">
+							The impact of inflammation-induced tumor plasticity during myeloid transformation
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1158/2159-8290.CD-21-1146" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Cancer Discovery</a>
+					</div>
+				</div>
+		  	</div>
 			<!-- POT1 -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -109,6 +126,12 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 1 -->
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
 			<!-- RdRp -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -127,12 +150,6 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 1 -->
-		<!-- Add 1 row of 3 cards -->
-		<div class="container">
-		<div class="row">
 			<!-- ELF -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -169,8 +186,17 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		</div>
+		<!-- End Row 2 -->
+		<!-- Add 1 row of 1 card -->
+		<div class="container">
+		<div class="row">
+			<!-- <div class="col-md-4">
+			</div> -->
 			<!-- TET2 Selectivity -->
 			<div class="col-md-4">
+			<!-- <div class="col-md-6"> -->
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
@@ -187,16 +213,9 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 2 -->
-		<!-- Add 1 row of 1 card -->
-		<div class="container">
-		<div class="row">
-			<div class="col-md-4">
-			</div>
 			<!-- PolK -->
 		  	<div class="col-md-4">
+			<!-- <div class="col-md-6"> -->
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
@@ -237,22 +256,24 @@
 		<div class="row">
 			<!-- School 1 -->
 			<!-- Change all to col-md-4 when uncommented  -->
-			<!-- <div class="col-md-4">
+			<div class="col-md-4">
 				<div class="card h-100">
 					<div class="card-body">
 						<p class="card-title">Medical</p>
 						<div class="card-img">
 							<img src="images/edu/msuchm.svg" class="card-img-pub" alt="MSUCHM logo">
 						</div>
+						<p class="card-title">Anticipated May 2026</p>
 						<p class="card-text">
-							Incoming MS1
+							Current MS1
 							<br>
 						</p>
 					</div>
 				</div>
-			</div> -->
+			</div>
 			<!-- School 2 -->
-			<div class="col-md-6">
+			<!-- <div class="col-md-6"> -->
+			<div class="col-md-4">
 				<div class="card h-100">
 					<div class="card-body">
 						<p class="card-title">Doctoral</p>
@@ -272,13 +293,14 @@
 							</em>
 						</p>
 						<div class="card-footer mx-auto">
-							<!-- <a href="https://digital.library.unt.edu" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Dissertation</a> -->
+							<a href="https://digital.library.unt.edu/ark:/67531/metadc1944361/" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Dissertation</a>
 						</div>
 					</div>
 				</div>
 			</div>
 			<!-- School 3 -->
-			<div class="col-md-6">
+			<!-- <div class="col-md-6"> -->
+			<div class="col-md-4">
 				<div class="card h-100">
 					<div class="card-body">
 						<p class="card-title">Baccalaureate</p>
