Add logo, update pubs

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   gtag('config', 'G-X2J6DS26HR');
 </script>
 
-	<title>Emmett Leddin</title>
+	<title>Dr. Emmett M. Leddin</title>
 
 	<link rel="icon" href="favicon.ico" type="image/png" />
 
@@ -35,6 +35,7 @@
 	<main role="main">
 	<section class="header bg-primary text-center">
 		<div class="container">
+			<img src="images/logos/caduceus-logo.svg" type="image/svg" width="10%" height="auto" style="float:left;" />
 			<div><h1>Emmett M. Leddin</h1></div>
 			<div><h2>PhD | Computational Biochemistry</h2></div>
 			<div class="my-block">
@@ -53,6 +54,8 @@
 				<a href="#hackathons">Hackathons</a>
 				&bull;
 				<a href="#CV">CV</a>
+				&bull;
+				<a href="#social">External Profiles</a>
 			</p>
 			</div>
 		</div>
@@ -74,6 +77,25 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+			<!-- POT1 -->
+			<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<div class="card-img">
+							<img src="https://jmg.bmj.com/content/jmedgenet/early/2022/12/19/jmg-2022-108776/F2.large.jpg" class="card-img-pub" alt="schematic diagram of Group 1 POT1 variants">
+						</div>
+						<p class="card-title">December 2022</p>
+						<!-- N-dash: &#8211; -->
+						<p class="card-text" style="font-style: italic;">
+							Population-based analysis of <em>POT1</em> variants in a cutaneous melanoma case&#8211;control cohort
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1136/jmg-2022-108776" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> J. Med. Genet.</a>
+						<a href="https://doi.org/10.1101/2022.05.16.22274971" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> MedRxiv</a>
+					</div>
+				</div>
+		  	</div>
 			<!-- TET2 H1881R -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -88,23 +110,6 @@
 					</div>
 					<div class="card-footer mx-auto">
 						<a href="https://doi.org/10.1158/2159-8290.CD-21-1146" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Cancer Discovery</a>
-					</div>
-				</div>
-		  	</div>
-			<!-- POT1 -->
-			<div class="col-md-4">
-				<div class="card h-100">
-			   		<div class="card-body">
-						<div class="card-img">
-							<img src="https://www.medrxiv.org/content/medrxiv/early/2022/05/19/2022.05.16.22274971/F3.large.jpg?width=800&height=600&carousel=1" class="card-img-pub" alt="histogram of telomere length and binding of POT1 variants ">
-						</div>
-						<p class="card-title">May 2022 (preprint)</p>
-						<p class="card-text" style="font-style: italic;">
-							Population-based analysis of <em>POT1</em> variants in a cutaneous melanoma case-control cohort
-						</p>
-					</div>
-					<div class="card-footer mx-auto">
-						<a href="https://doi.org/10.1101/2022.05.16.22274971" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> MedRxiv</a>
 					</div>
 				</div>
 		  	</div>
@@ -704,7 +709,7 @@
 	</main>
 </body>
 
-<section class="footer">
+<section class="footer" id="social">
 	<p class="text-center" style="font-size: 60px">
 	  <a target="_blank" href="https://github.com/emleddin" aria-label="GitHub"><i class="fab fa-github" aria-hidden="true"></i></a>
 	  <a target="_blank" href="https://gist.github.com/emleddin" aria-label="GitHub Gist"><i class="fas fa-code" aria-hidden="true"></i></a>
