--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+			<!-- APOBEC3B -->
+			<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<!-- <div class="card-img"> -->
+							<!-- <img src="" class="card-img-pub" alt="abc"> -->
+						<!-- </div> -->
+						<p class="card-title">December 2023</p>
+						<!-- N-dash: &#8211; -->
+						<p class="card-text" style="font-style: italic;">
+							Computational drug discovery of an inhibitor of APOBEC3B as a treatment for epithelial cancers
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1080/07391102.2023.2293269" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> J. Biomol. Struct. Dyn.</a>
+					</div>
+				</div>
+		  	</div>
 			<!-- POT1 -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -110,9 +128,16 @@
 					</div>
 					<div class="card-footer mx-auto">
 						<a href="https://doi.org/10.1158/2159-8290.CD-21-1146" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Cancer Discovery</a>
+						<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9547930/" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> PubMed Central</a>
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 1 -->
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
 			<!-- PARP1 -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -131,12 +156,6 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 1 -->
-		<!-- Add 1 row of 3 cards -->
-		<div class="container">
-		<div class="row">
 			<!-- RdRp -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -173,6 +192,14 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 2 -->
+		<!-- Add 1 row of 1 card -->
+		<div class="container">
+		<div class="row">
+			<!-- <div class="col-md-4">
+			</div> -->
 			<!-- TET2 APCSB -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -191,14 +218,6 @@
 					</div>
 				</div>
 			</div>
-		</div>
-		</div>
-		<!-- End Row 2 -->
-		<!-- Add 1 row of 1 card -->
-		<div class="container">
-		<div class="row">
-			<!-- <div class="col-md-4">
-			</div> -->
 			<!-- TET2 Selectivity -->
 			<div class="col-md-4">
 			<!-- <div class="col-md-6"> -->
