Add APOBEC image

--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@
 			<div class="col-md-4">
 				<div class="card h-100">
 			   		<div class="card-body">
-						<!-- <div class="card-img"> -->
-							<!-- <img src="" class="card-img-pub" alt="abc"> -->
-						<!-- </div> -->
+						<div class="card-img">
+							<img src="images/pubs/apobec-fig1.jpg" class="card-img-pub" alt="left: catalytic and allosteric binding sites, right: secondary structure of APOBEC3B">
+						</div>
 						<p class="card-title">December 2023</p>
 						<!-- N-dash: &#8211; -->
 						<p class="card-text" style="font-style: italic;">
@@ -317,7 +317,8 @@
 							</em>
 						</p>
 						<div class="card-footer mx-auto">
-							<a href="https://digital.library.unt.edu/ark:/67531/metadc1944361/" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Dissertation</a>
+							<a href="https://digital.library.unt.edu/ark:/67531/metadc1944361/" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> Dissertation</a>
+							<!-- <a href="https://www.proquest.com/pqdtglobal1/dissertations-theses/computational-modeling-cancer-related-mutations/docview/2738127575/sem-2?accountid=7113" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Dissertation (ProQuest)</a> -->
 						</div>
 					</div>
 				</div>
