Add pub, remove old sites

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				&bull;
 				<a href="#tutorials">Tutorials</a>
 				&bull;
-				<a href="#sites">Websites Maintained</a>
+				<a href="#sites">Website Maintained</a>
 				&bull;
 				<a href="#hackathons">Hackathons</a>
 				&bull;
@@ -77,6 +77,24 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+			<!-- PolK Y432S -->
+			<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<div class="card-img">
+							<img src="images/pubs/kappa-Y432S.jpg" class="card-img-pub" alt="Human polymerase kappa, with zoom of active site and values for WT and Y432S mutant">
+						</div>
+						<p class="card-title">February 2024 (preprint)</p>
+						<!-- N-dash: &#8211; -->
+						<p class="card-text" style="font-style: italic;">
+							Effects of the Y432S Cancer-Associated Variant on the Reaction Mechanism of Human DNA Polymerase κ
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.26434/chemrxiv-2024-ksg1l" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> ChemRxiv</a>
+					</div>
+				</div>
+		  	</div>
 			<!-- APOBEC3B -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -114,6 +132,12 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 1 -->
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
 			<!-- TET2 H1881R -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -132,12 +156,6 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 1 -->
-		<!-- Add 1 row of 3 cards -->
-		<div class="container">
-		<div class="row">
 			<!-- PARP1 -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -174,6 +192,14 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 2 -->
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
+			<!-- <div class="col-md-4">
+			</div> -->
 			<!-- ELF -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -191,15 +217,7 @@
 						<a href="https://doi.org/10.26434/chemrxiv.14343137" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> ChemRxiv</a>
 					</div>
 				</div>
-		  	</div>
-		</div>
-		</div>
-		<!-- End Row 2 -->
-		<!-- Add 1 row of 1 card -->
-		<div class="container">
-		<div class="row">
-			<!-- <div class="col-md-4">
-			</div> -->
+			</div>
 			<!-- TET2 APCSB -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -237,28 +255,36 @@
 					</div>
 				</div>
 		  	</div>
-			<!-- PolK -->
-		  	<div class="col-md-4">
-			<!-- <div class="col-md-6"> -->
-				<div class="card h-100">
-			   		<div class="card-body">
-						<div class="card-img">
-							<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/crtoec/2018/crtoec.2018.31.issue-8/acs.chemrestox.8b00055/20180813/images/medium/tx-2018-000553_0012.gif" class="card-img-pub" alt="two-part image with a PDB structure to the left and the extension activity to the right">
-						</div>
-						<p class="card-title">July 2018</p>
-						<p class="card-text" style="font-style: italic;">
-							Characterization of Nine Cancer-Associated Variants in Human DNA Polymerase kappa
-						</p>
-					</div>
-					<div class="card-footer mx-auto">
-						<a href="https://doi.org/10.1021/acs.chemrestox.8b00055" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Chem. Res. Tox.</a>
-						<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6130208/" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> PubMed Central</a>
-					</div>
-				</div>
-		  	</div>
 		</div>
 		</div>
 		<!-- End row 3 -->
+		<!-- Add 1 row of 1 card -->
+		<div class="container">
+			<div class="row">
+				<div class="col-md-4">
+				</div>
+				<!-- PolK -->
+				  <div class="col-md-4">
+				<!-- <div class="col-md-6"> -->
+					<div class="card h-100">
+						   <div class="card-body">
+							<div class="card-img">
+								<img src="https://pubs.acs.org/na101/home/literatum/publisher/achs/journals/content/crtoec/2018/crtoec.2018.31.issue-8/acs.chemrestox.8b00055/20180813/images/medium/tx-2018-000553_0012.gif" class="card-img-pub" alt="two-part image with a PDB structure to the left and the extension activity to the right">
+							</div>
+							<p class="card-title">July 2018</p>
+							<p class="card-text" style="font-style: italic;">
+								Characterization of Nine Cancer-Associated Variants in Human DNA Polymerase kappa
+							</p>
+						</div>
+						<div class="card-footer mx-auto">
+							<a href="https://doi.org/10.1021/acs.chemrestox.8b00055" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> Chem. Res. Tox.</a>
+							<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6130208/" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> PubMed Central</a>
+						</div>
+					</div>
+				  </div>
+			</div>
+			</div>
+			<!-- End row 4 -->
 	</section>
 
 	<!--
@@ -568,13 +594,14 @@
  <section class="text-center">
 	 <div class="container" id="sites">
 		 <h2>
-			 Websites Maintained
+			 Website Maintained
 		 </h2>
 	 </div>
 
 	 <!-- Add 1 row of 3 cards -->
  	<div class="container">
  	<div class="row">
+		<!--
 		<div class="col-md-4">
  			<div class="card h-100">
  		   		<div class="card-body">
@@ -591,6 +618,9 @@
  				</div>
  			</div>
  	  	</div>
+		-->
+		<div class="col-md-4">
+		</div>
  		<div class="col-md-4">
  			<div class="card h-100">
  				<div class="card-body">
@@ -607,6 +637,7 @@
  				</div>
  			</div>
  		</div>
+		<!--
  	  	<div class="col-md-4">
  			<div class="card h-100">
  		   		<div class="card-body">
@@ -625,6 +656,7 @@
  	  	</div>
  	</div>
  	</div>
+	-->
  	<!-- End Row 1 -->
 	</section>
 
