--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
 		<!-- Add 1 row of 3 cards -->
 		<div class="container">
 		<div class="row">
+			<!-- Trichosporon -->
+			<div class="col-md-4">
+				<div class="card h-100">
+			   		<div class="card-body">
+						<div class="card-img">
+							<img src="https://en.wikipedia.org/wiki/Trichosporon_asahii#/media/File:Trichosporon_asahii_Gram_Stain.jpg" class="card-img-pub" alt="Gram stain of Trichosporon asahii">
+						</div>
+						<p class="card-title">August 2025</p>
+						<!-- N-dash: &#8211; -->
+						<p class="card-text" style="font-style: italic;">
+							Disseminated <em style="font-style: normal;">Trichosporon asahii</em> Infection in an Immunocompetent Polytrauma Patient; A Case Report
+						</p>
+					</div>
+					<div class="card-footer mx-auto">
+						<a href="http://doi.org/10.51521/WJCRCI.2025.e42.413" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> WJCRCI</a>
+					</div>
+				</div>
+		  	</div>
 			<!-- PolK Y432S -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -84,13 +102,14 @@
 						<div class="card-img">
 							<img src="images/pubs/kappa-Y432S.jpg" class="card-img-pub" alt="Human polymerase kappa, with zoom of active site and values for WT and Y432S mutant">
 						</div>
-						<p class="card-title">February 2024 (preprint)</p>
+						<p class="card-title">May 2024</p>
 						<!-- N-dash: &#8211; -->
 						<p class="card-text" style="font-style: italic;">
 							Effects of the Y432S Cancer-Associated Variant on the Reaction Mechanism of Human DNA Polymerase κ
 						</p>
 					</div>
 					<div class="card-footer mx-auto">
+						<a href="https://doi.org/10.1021/acs.jcim.4c00339" class="button"><i class="fas fa-bookmark" aria-hidden="true"></i> J Chem Inf Model</a>
 						<a href="https://doi.org/10.26434/chemrxiv-2024-ksg1l" class="button"><i class="fas fa-lock-open" aria-hidden="true"></i> ChemRxiv</a>
 					</div>
 				</div>
@@ -113,6 +132,12 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 1 -->
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
 			<!-- POT1 -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -123,7 +148,7 @@
 						<p class="card-title">December 2022</p>
 						<!-- N-dash: &#8211; -->
 						<p class="card-text" style="font-style: italic;">
-							Population-based analysis of <em>POT1</em> variants in a cutaneous melanoma case&#8211;control cohort
+							Population-based analysis of <em style="font-style: normal;">POT1</em> variants in a cutaneous melanoma case&#8211;control cohort
 						</p>
 					</div>
 					<div class="card-footer mx-auto">
@@ -132,12 +157,6 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 1 -->
-		<!-- Add 1 row of 3 cards -->
-		<div class="container">
-		<div class="row">
 			<!-- TET2 H1881R -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -174,6 +193,14 @@
 					</div>
 				</div>
 		  	</div>
+		</div>
+		</div>
+		<!-- End Row 2 -->
+		<!-- Add 1 row of 3 cards -->
+		<div class="container">
+		<div class="row">
+			<!-- <div class="col-md-4">
+			</div> -->
 			<!-- RdRp -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -192,14 +219,6 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End Row 2 -->
-		<!-- Add 1 row of 3 cards -->
-		<div class="container">
-		<div class="row">
-			<!-- <div class="col-md-4">
-			</div> -->
 			<!-- ELF -->
 			<div class="col-md-4">
 				<div class="card h-100">
@@ -236,6 +255,12 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		</div>
+		<!-- End row 3 -->
+		<!-- Add 1 row of 2 cards -->
+		<div class="container">
+			<div class="row">
 			<!-- TET2 Selectivity -->
 			<div class="col-md-4">
 			<!-- <div class="col-md-6"> -->
@@ -255,14 +280,6 @@
 					</div>
 				</div>
 		  	</div>
-		</div>
-		</div>
-		<!-- End row 3 -->
-		<!-- Add 1 row of 1 card -->
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4">
-				</div>
 				<!-- PolK -->
 				  <div class="col-md-4">
 				<!-- <div class="col-md-6"> -->
@@ -282,6 +299,9 @@
 						</div>
 					</div>
 				  </div>
+				<!-- Blank column -->
+				<div class="col-md-4">
+				</div>
 			</div>
 			</div>
 			<!-- End row 4 -->
@@ -315,7 +335,7 @@
 						</div>
 						<p class="card-title">Anticipated May 2026</p>
 						<p class="card-text">
-							Current MS2
+							Current MS4
 							<br>
 						</p>
 					</div>
