--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<div class="card h-100">
 			   		<div class="card-body">
 						<div class="card-img">
-							<img src="https://en.wikipedia.org/wiki/Trichosporon_asahii#/media/File:Trichosporon_asahii_Gram_Stain.jpg" class="card-img-pub" alt="Gram stain of Trichosporon asahii">
+							<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3d/Trichosporon_asahii_Gram_Stain.jpg/2560px-Trichosporon_asahii_Gram_Stain.jpg" class="card-img-pub" alt="Gram stain of Trichosporon asahii">
 						</div>
 						<p class="card-title">August 2025</p>
 						<!-- N-dash: &#8211; -->
@@ -242,7 +242,7 @@
 				<div class="card h-100">
 					<div class="card-body">
 						<div class="card-img">
-							<img src="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7036138/bin/nihms-1552959-f0001.jpg" class="card-img-pub" alt="stepwise oxidation of 5mC to 5hmC to 5fC to 5caC">
+							<img src="https://cdn.ncbi.nlm.nih.gov/pmc/blobs/594b/7036138/e48a3ba60f64/nihms-1552959-f0001.jpg" class="card-img-pub" alt="stepwise oxidation of 5mC to 5hmC to 5fC to 5caC">
 						</div>
 						<p class="card-title">October 2019</p>
 						<p class="card-text" style="font-style: italic;">
